css/styles.css
    /* --- General elements selectors --- */

h1 {
  font-size: 190%;
  font-family: "Kaushan", Helvetica, sans-serif;
}

h2, h3, h4 {
  padding-left: 10px;
}

body {
  background-color: #f8f8f5; 
  font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

/* Links */

a {
  font-family: Arial, Helvetica, sans-serif;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-decoration-color: #fff;
} 

a:visited {
  text-decoration: none;
}

/* Footer elements */

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 300px;
  background-color: #000;
}

footer ul li {
  display: inline;
  padding-top: 10%;
  color: #434344;
}

footer ul li a:visited {
  color: #434344;
  font-size: 90%;
  text-decoration: none;
}

footer p {
  color: #fff;
  font-size: 80%;
  padding-top: 5%;
}

footer ul li {
  margin: 5px;
}

    /* --- ID selectors --- */

/* Header Ids */

#header-flex {
  display: flex;
  justify-content: center;
  align-content: center;
  align-items: center;
  text-align: center;
}

#header-flex-h1 {
  padding-left: 5%;
}

#wheater-icon {
  width: 35%;
}

#header-flex-time {
  margin-top: -10%;
  font-size: 60%;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
}

#header-flex-time-left-tablet {
  display: none;
  font-size: 60%;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
}

#header-widgets-column-flex {
  display: flex;
  flex-direction: column;
}

/* Menu Ids */

#menu {
  background-color: #000;
  font-size: 100%;
  font-weight: bold;
}

#menu ul {
  list-style: none;
}

#menu ul li{
  display: inline-block;
}

#menu ul li a{
  display: block;
  color: #fff;
  padding: 10px;
}

#menu ul li a:hover{
  background-color: #434344;
}

#menu ul li a:visited{
  color: #fff;
}

 /* Navbar Ids */

#nav-bar-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 55px;
}

#nav-bar-menu-icon {
  width: 30px;
  padding-left: 10px;
}

#nav-bar-flex-links {
  display: none;
} 

#nav-bar-search-icon {
  padding-right: 10px;
}

#search-field {
  display: none;
}

/* Body Ids */

#main-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: stretch;
  text-align: center;
  width: 90%;
  max-width: 100%;
  margin: 10px;
  padding-left: 3%;
}

#first-second-news-flex {
  width: 100%;
  padding: 1%;
  gap: 1%;
  border-bottom: 2px solid #000;
  color: #fff;
  font-weight: bold;
  text-decoration: underline;
  text-shadow: 2px 2px 3px #000;
}

#first-news-article-flex {
  width: 100%;
  height: 360px;
  margin-bottom: 10px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border: 3px solid #000;
  background-image: url(../images/img-1.png);
}

#first-news-article-flex article {   /* text align inside the image */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.paragraph-news-padding {
  padding-left: 10px;
}

/* Aside Ids and Class */

#second-news-aside-flex aside {  
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

        /* If i dont use class in the side news the background image doesnt load */

.aside-top-news-flex {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 360px;
  margin-bottom: 10px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border: 3px solid #000;
  background-image: url(../images/img-2.jpg);
} 

.aside-bottom-news-flex {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 360px;
  margin-bottom: 10px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border: 3px solid #000;
  background-image: url(../images/img-3.jpg);
} 

/*
#aside-top-news {
  background-image: url(/images/img-2.jpg);
}

#aside-bottom-news {
  background-image: url(../images/img-3.jpg);
} 
*/

        /*------------------------------------------- */

/* Bottom Ids */

#bottom-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: stretch;
  text-align: center;
  padding-left: 2%;
}

#bottom-section-title {
  color: #000;
  font-size: 100%;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  text-decoration: underline;
  text-shadow: none;
}

.third-news-flex {
  width: 100%;
  height: 300px;
  margin-bottom: 10px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border: 3px solid #000;
  color: #fff;
  font-weight: bold;
  text-decoration: underline;
  text-shadow: 2px 2px 3px #000;
}

#third-news-1 {
  background-image: url(../images/img-4.jpg);
}

#third-news-2 {
  background-image: url(../images/img-5.png);
}

#third-news-3 {
  background-image: url(../images/img-6.jpg);
}

#third-news-4 {
  background-image: url(../images/img-7.jpg);
}

#third-news-5 {
  background-image: url(../images/img-8.jpg);
}

#third-news-6 {
  background-image: url(../images/img-9.jpg);
}

    /* --- Subscription page --- */


form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  text-align: center;
  max-width: 100%;
  margin-left: 20%;
  margin-right: 20%;
  margin-top: 3%;
  margin-bottom: 5%;
  border-radius: 4px;
  font-weight: bold;
  background-color: #000;
}

#form-title {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-top: 3%;
  font-size: 200%;
  font-weight: bold;
  text-decoration: underline;
}

#form-container {
  display: flex;
  flex-flow: wrap;
  justify-content: space-evenly;
  align-items: baseline;
  padding-top: 3%;
  padding-bottom: 3%;
  margin: 1%;
  line-height: 150%;
}

.column-container {
  width: 90%;
}

#sendButton {
  align-self: center;
  padding: 10px;
  width: 120px;
  margin-bottom: 5%;
  border: 0px;
  border-radius: 10px;
  color: #FFF;
  background-color: #434344;
  font-size: 100%;
  font-weight: bold;
}

#sendButton:hover {
  background-color: #c4c1c1;
  color: #000;
}

#sendButton:active {
  background-color: red;
  color: #f8f8f5;
}

label {
  font-size: 100%;
  color: #FFF;
}

input {
  width: 90%;
  font-size: 100%;
  color: #434344;
  margin-bottom: 4%;
}

